# CourseAssignments

./: README.md
Assignment2/Question2/: index.html
Assignment2/Question3/: index.html  style.css
computer-engineering/cpp/: calculator.cpp  loops.cpp  main  main.cpp  pointers.cpp  run.sh
data-structure/AVL-Tree/: avl_tree.py  main.py  tree_visual.py
data-structure/Array&LinkedList/Assignement_1/: main.py
data-structure/HashTables/: hashtable.py
data-structure/Middeterm/: LinkedList.py
data-structure/Stack&Queue/ClassAssignment/: stack_1.py  stack_2.py
introduction-to-AI/: ~$Course-Presentation-YOLO.pptx
introduction-to-AI/SVM/: practice-1.py
software-engineering/1. Introduction/: Introduction.pptx
software-engineering/1. Introduction/homework/: Presentation1.pptx  Presentation2.pptx  README.md  pyproject.toml
software-engineering/1. Introduction/homework/src/mathapp/: __init__.py  main.py
software-engineering/6. Agile Sprint/: health_data.py  index.html  report.html  test.py
software-engineering/Course Presentation - SDLC/: SLDC-methodolgies.pptx  SLDC-methodologies.pptx
web-programming/Assignment1/: index.html
web-programming/Assignment2/: assignment_2.pptx
web-programming/Assignment3/: bootstrap-example.html  striped.css  striped.html  table.css  table.html  tablegrid.css  tablegrid.html
web-programming/Assignment4/: question1.html  question3.css  question3.html
web-programming/Assignment5/: FtoC.css  FtoC.html  FtoC.js  Math.html  MyBio.html  ObjectLog.html
web-programming/CourseProjects/: CourseProjectTitle.pptx
(+13 files in other folders)
